--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/index.ts "
-
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.18.0"
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "ts-node-dev": "^2.0.0",
