--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,14 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - app-network
 
   backend:
     build: .
     container_name: backend
     environment:
-      SECRET_KEY : ${SECRET_KEY}
+      SECRET_KEY: ${SECRET_KEY}
       DATABASE_URL: ${PRISMA_DB_URL}
       PORT: 5000
     ports:
@@ -27,6 +29,12 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
