--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts "
+    "migrate": "prisma migrate dev",
+    "dev": "npm run migrate && ts-node src/index.ts "
   },
   "keywords": [],
   "author": "",
